Tweak CSS flex/overflow values for GScan workflow names, to avoid word-break, and hidden job statuses

--- a/src/styles/cylc/_gscan.scss
+++ b/src/styles/cylc/_gscan.scss
@@ -21,6 +21,11 @@
       a.c-workflow-stopped {
         opacity: 0.5;
       }
+      .c-gscan-workflow-name {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
   }
 }
